Location attribs for crafting.

--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -135,6 +135,7 @@
                     <button type="button" id="add-recipeattrib-btn" class="lesser-button">Add Required Attribute</button>
                 </div>
             {% endif %}
+            <div style="height: 15px;"></div>
             <button type="button"
                     id="add-recipe-btn"
                     class="lesser-button"
