--- a/app/templates/play/attrib.html
+++ b/app/templates/play/attrib.html
@@ -50,6 +50,12 @@
         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
         <span class="hotkey-indicator">{{ letter }}</span>
         <a href="{{ link }}">{{ subject.name }}</a>
+    {% elif subject.typename() == 'loc' %}
+        {% set link = url_for('play_location', loc_id=subject.id) %}
+        {% set letter = link_letters.next(link) %}
+        <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+        <span class="hotkey-indicator">{{ letter }}</span>
+        <a href="{{ link }}">{{ subject.name }}</a>
     {% endif %}
     </div>
     <h1>{{ current.name }}</h1>
