--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -168,6 +168,7 @@
                     border-top: 2px solid #555;
                     border-radius: 4px;
                     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+                    line-height: 0.5;
                 }
             </style>
             <div class="scrollable">
