Fix message log line overlapping.

--- a/app/templates/configure/event.html
+++ b/app/templates/configure/event.html
@@ -197,9 +197,8 @@
              id="triggers-entities-container">
             <h3 class="label-like">Links and Triggers</h3>
             <p class="info label-like">
-                Show a link to this event from the Overview (if checked)
-                and from these items and locations.
-                To show the link from a character, go to Character settings.
+                Where to show a link to this event.
+                For characters, add in Character settings.
             </p>
             <label class="spacious" style="display: block;">
                 <input type="checkbox"
@@ -239,8 +238,8 @@
             </div>
             <p class="info label-like">
                 If trigger chance is greater than 0%,
-                then the event can automatically trigger during production of the items,
-                and during travel of at least 2 duration to or from the locations.
+                then the event can automatically trigger during production of these items,
+                and during travel to or from these locations (duration 2 minimum).
                 Events do not trigger more than once per trip or item produced.
             </p>
             <label>
