--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -168,12 +168,21 @@
                     border-top: 2px solid #555;
                     border-radius: 4px;
                     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-                    line-height: 0.5;
+                }
+                .scrollable p {
+                    margin: 4px 0;
+                    line-height: 1.3;
+                    color: tan;
+                }
+                .scrollable .tight {
+                    line-height: 1.0;
+                    display: inline-block;
                 }
             </style>
             <div class="scrollable">
                 {% for entry in log_messages %}
-                    <p style="color: tan;">{{ entry.message | safe }}
+                    <p>
+                        <span class="tight">{{ entry.message | safe }}</span>
                         {% if entry.count > 1 %}
                         <span class="label-like"> (x{{ entry.count }})</span>
                         {% endif %}
